; ModuleID = '/home/carl/AnghaBench/mpv/video/out/extr_w32_common.c_signal_events.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/extr_w32_common.c_signal_events.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vo_w32_state = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.vo_w32_state*, i32)* @signal_events to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @signal_events(%struct.vo_w32_state* %0, i32 %1) #0 {
  %3 = alloca %struct.vo_w32_state*, align 8
  %4 = alloca i32, align 4
  store %struct.vo_w32_state* %0, %struct.vo_w32_state** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.vo_w32_state*, %struct.vo_w32_state** %3, align 8
  %6 = getelementptr inbounds %struct.vo_w32_state, %struct.vo_w32_state* %5, i32 0, i32 1
  %7 = load i32, i32* %4, align 4
  %8 = call i32 @atomic_fetch_or(i32* %6, i32 %7)
  %9 = load %struct.vo_w32_state*, %struct.vo_w32_state** %3, align 8
  %10 = getelementptr inbounds %struct.vo_w32_state, %struct.vo_w32_state* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @vo_wakeup(i32 %11)
  ret void
}

declare dso_local i32 @atomic_fetch_or(i32*, i32) #1

declare dso_local i32 @vo_wakeup(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
